@@ -1,3 +1,9 @@
+[B]Version v0.3.2[/B]
+- Handled HttpError occurs when incorrect URL passed.
+
+[B]Version v0.3.1[/B]
+- Marked as stable version.
+
 [B]Version v0.2.3[/B]
 - Updated turtle lib version to 1.4.7 for immediate fixes.
 
